update introductory paragraph

--- a/docs/components/customization/user-profile.mdx
+++ b/docs/components/customization/user-profile.mdx
@@ -11,9 +11,10 @@ There are two ways to render the `<UserProfile />` component:
 - As a modal that opens when the [`<UserButton />`](/docs/components/user/user-button) is clicked
 - As a dedicated page
 
-This guide includes examples for both use cases. You can select the tabs on the code examples to see the implementation for your preferred use case.
+This guide includes examples for both use cases. You can select one of the following two tabs on the code examples to see the implementation for your preferred use case:
 
-By default, the `<UserButton />` sets `userProfileMode='modal'`. If you are using the default settings, then you should use the `<UserButton />` examples. However, if you are using the  `userProfileMode='navigation'` and `userProfileUrl='/user-profile'` props on the `<UserButton />` component, then you should use the `Dedicated page` examples.
+- `<UserButton />` tab: By default, the `<UserButton />` sets `userProfileMode='modal'`. If you are using the default settings, then you should select this tab.
+- `Dedicated page` tab: If you do not want the `<UserProfile />` to open as a modal, then you should select this tab. For these examples, you need to set `userProfileMode='navigation'` and `userProfileUrl='/user-profile'` on the `<UserButton />` component.
 
 For the sake of this guide, examples are written for Next.js App Router, but they are supported by any React meta framework, such as Remix or Gatsby.
 
