--- a/docs/components/customization/user-profile.mdx
+++ b/docs/components/customization/user-profile.mdx
@@ -15,7 +15,7 @@ This guide includes examples for both use cases. You can select the tabs on the 
 
 By default, the `<UserButton />` sets `userProfileMode='modal'`. If you are using the default settings, then you should use the `<UserButton />` examples. However, if you are using the  `userProfileMode='navigation'` and `userProfileUrl='/user-profile'` props on the `<UserButton />` component, then you should use the `Dedicated page` examples.
 
-For the sake of this guide, examples are written for Next.js App Router but they are supported by any React meta framework, such as Remix or Gatsby.
+For the sake of this guide, examples are written for Next.js App Router, but they are supported by any React meta framework, such as Remix or Gatsby.
 
 ## Add a custom page to the `<UserProfile />` component
 
