code review suggestion

--- a/docs/components/customization/user-profile.mdx
+++ b/docs/components/customization/user-profile.mdx
@@ -32,7 +32,7 @@ To add a custom page to the `<UserProfile />` component, use the `<UserProfile.P
 | --- | --- | --- |
 | `label` | `string` | The name that will be displayed in the navigation sidebar for the custom page. |
 | `labelIcon` | `React.ReactElement` | An icon displayed next to the label in the navigation sidebar. |
-| `url` | `string` | The path segment that will be used to navigate to the custom page. (e.g. if the `UserProfile` component is rendered at `/user`, then the custom page will be accessed at `/user/{url}` when using path routing) |
+| `url` | `string` | The path segment that will be used to navigate to the custom page. (e.g. if the `<UserProfile />` component is rendered at `/user`, then the custom page will be accessed at `/user/{url}` when using path routing) |
 | `children` | `React.ReactElement` | The components to be rendered as content inside the custom page. |
 
 ### Example
@@ -243,7 +243,9 @@ Note that the first item in the navigation sidebar cannot be a `<UserProfile.Lin
 
 <Tabs type="usage" items={["Dedicated Page", "<UserButton />"]}>
   <Tab>
-    It's important to note that the first page in the list will always be rendered under the root path that you set with the `path` prop. It's `url` prop will be ignored, so you can pass any value you want. In the following example, `path` is set to `/user-profile`, so the `<CustomPage />` is rendered under the `/user-profile` path.
+    The first page in the list will always be rendered under the root path defined with the `path` prop. Its `url` prop will be ignored.
+
+    In the following example, `path` is set to `/user-profile`, so the `<CustomPage />` is rendered under the `/user-profile` path.
 
     ```tsx filename="/app/user-profile/[[...user-profile]]/page.tsx"
     "use client";
