--- a/docs/advanced-usage/clerk-idp.mdx
+++ b/docs/advanced-usage/clerk-idp.mdx
@@ -98,6 +98,6 @@ Below is an example of a response from `/oauth/userinfo`.
 
 ## Frequently asked questions (FAQ)
 
-**When do the tokens expire?**
+### When do the tokens expire?
 
 Access tokens expire after 2 hours, and refresh tokens expire after 3 days.
