explain how to reorder default routes better

--- a/docs/components/customization/user-profile.mdx
+++ b/docs/components/customization/user-profile.mdx
@@ -237,9 +237,9 @@ The following example adds a link to the homepage in the navigation sidebar of t
 
 ### Reorder default routes
 
-If you want to reorder the default routes (`Account` and `Security`) in the `<UserProfile />` navigation sidebar, you can use the `<UserProfile.Page />` component with the `label` prop set to `'account'` or `'security'`. This will target the existing default page and allow you to rearrange it.
+If you want to reorder the default routes, `Account` and `Security`, set the `label` prop to `'account'` or `'security'`. This will target the existing default page and allow you to rearrange it.
 
-Note that the first item in the navigation sidebar cannot be a `<UserProfile.Link />` or `<UserButton.UserProfileLink />` component.
+Note that when reordering default routes, the first item in the navigation sidebar cannot be a `<UserProfile.Link />` or `<UserButton.UserProfileLink />` component.
 
 <Tabs type="usage" items={["Dedicated Page", "<UserButton />"]}>
   <Tab>
