--- a/docs/references/javascript/clerk/redirect-methods.mdx
+++ b/docs/references/javascript/clerk/redirect-methods.mdx
@@ -132,7 +132,11 @@ Redirects to the configured URL where [`<OrganizationProfile />`](/docs/referenc
 | --- | --- |
 | `Promise<unknown>` | A promise that can be `await`ed in order to listen for the navigation to finish.<br/>The inner value should not be relied on, as it can change based on the framework it's used within. |
 
-## `redirectToHome()`
+## `redirectToHome()` (deprecated)
+
+<Callout type="warning">
+  `Clerk.redirectToHome()` is deprecated and will be removed in the [Core 2](https://beta.clerk.com/docs) version of Clerk.
+</Callout>
 
 ```typescript
 function redirectToHome(): Promise<unknown>;
