--- a/docs/references/javascript/clerk/organization-methods.mdx
+++ b/docs/references/javascript/clerk/organization-methods.mdx
@@ -49,7 +49,11 @@ The `createOrganization` method is used to create an organization programaticall
 | --- | --- |
 | <code>Promise\<[Organization][org-ref\></code> | This method returns a `Promise` which resolves to the newly created [`Organization`][org-ref]. |
 
-## `getOrganizationMemberships()`
+## `getOrganizationMemberships()` (deprecated)
+
+<Callout type="warning">
+  `Clerk.getOrganizationMemberships()` is deprecated and will be removed in the [Core 2](https://beta.clerk.com/docs) version of Clerk. Use [`User.getOrganizationMemberships()`](/docs/references/javascript/user/user) instead.
+</Callout>
 
 ```typescript
 function getOrganizationMemberships(): Promise<OrganizationMembership[]>;
