switch order to better follow user's story

--- a/docs/components/customization/user-profile.mdx
+++ b/docs/components/customization/user-profile.mdx
@@ -22,11 +22,11 @@ For the sake of this guide, examples are written for Next.js App Router, but the
 
 Custom pages can be rendered inside the `<UserProfile />` component and provide a way to incorporate app-specific settings or additional functionality.
 
-To add a custom page to the `<UserProfile />` component, use the `<UserProfile.Page />` component or the `<UserButton.UserProfilePage />` component, depending on your use case.
+To add a custom page to the `<UserProfile />` component, use the `<UserButton.UserProfilePage />` component or the `<UserProfile.Page />` component, depending on your use case.
 
 ### Props
 
-`<UserProfile.Page />` and `<UserButton.UserProfilePage />` accept the following props, all of which are *required*:
+`<UserButton.UserProfilePage />` and `<UserProfile.Page />` accept the following props, all of which are *required*:
 
 | Name | Type | Description |
 | --- | --- | --- |
@@ -37,63 +37,9 @@ To add a custom page to the `<UserProfile />` component, use the `<UserProfile.P
 
 ### Example
 
-The following example demonstrates two ways that you can render content in the `<UserProfile.Page />` or `UserButton.UserProfilePage` component: as a component or as a direct child.
+The following example demonstrates two ways that you can render content in the `<UserButton.UserProfilePage />` or `<UserProfile.Page />` component: as a component or as a direct child.
 
-<CodeBlockTabs type="usage" options={["Dedicated page", "<UserButton />"]}>
-  ```tsx filename="/app/user-profile/[[...user-profile]]/page.tsx"
-  "use client";
-
-  import { UserProfile } from '@clerk/nextjs';
-
-  const DotIcon = () => {
-    return (
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        viewBox="0 0 512 512"
-        fill="currentColor"
-      >
-        <path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z" />
-      </svg>
-    )
-  }
-
-  const CustomPage = () => {
-    return (
-      <div>
-        <h1>Custom Profile Page</h1>
-        <p>This is the custom profile page</p>
-      </div>
-    );
-  };
-
-  const UserProfilePage = () => (
-    <UserProfile path="/user-profile" routing="path">
-      {/* You can pass the content as a component */}
-      <UserProfile.Page
-        label="Custom Page"
-        labelIcon={<DotIcon />}
-        url="custom-page"
-      >
-        <CustomPage />
-      </UserProfile.Page>
-
-      {/* You can also pass the content as direct children */}
-      <UserProfile.Page
-        label="Terms"
-        labelIcon={<DotIcon />}
-        url="terms"
-      >
-        <div>
-          <h1>Custom Terms Page</h1>
-          <p>This is the custom terms page</p>
-        </div>
-      </UserProfile.Page>
-    </UserProfile>
-  );
-
-  export default UserProfilePage;
-  ```
-
+<CodeBlockTabs type="usage" options={["<UserButton />", "Dedicated page"]}>
   ```tsx filename="/app/components/Header.tsx"
   "use client";
 
@@ -149,31 +95,11 @@ The following example demonstrates two ways that you can render content in the `
 
   export default Header;
   ```
-</CodeBlockTabs>
 
-## Add a custom link to the `<UserProfile />` component
-
-You can add external links to the `<UserProfile />` navigation sidebar using the `<UserProfile.Link />` component or the `<UserButton.UserProfileLink />` component, depending on your use case.
-
-### Props
-
-`<UserProfile.Link />` and `<UserButton.UserProfileLink />` accept the following props, all of which are *required*:
-
-| Name | Type | Description |
-| --- | --- | --- |
-| `label` | `string` | The name that will be displayed in the navigation sidebar for the link.  |
-| `labelIcon` | `React.ReactElement` | An icon displayed next to the label in the navigation sidebar. |
-| `url` | `string` | The absolute or relative url to navigate to |
-
-### Example
-
-The following example adds a link to the homepage in the navigation sidebar of the `<UserProfile />` component.
-
-<CodeBlockTabs type="usage" options={["Dedicated page", "<UserButton />"]}>
   ```tsx filename="/app/user-profile/[[...user-profile]]/page.tsx"
   "use client";
 
-  import { UserProfile } from "@clerk/nextjs";
+  import { UserProfile } from '@clerk/nextjs';
 
   const DotIcon = () => {
     return (
@@ -187,19 +113,63 @@ The following example adds a link to the homepage in the navigation sidebar of t
     )
   }
 
+  const CustomPage = () => {
+    return (
+      <div>
+        <h1>Custom Profile Page</h1>
+        <p>This is the custom profile page</p>
+      </div>
+    );
+  };
+
   const UserProfilePage = () => (
     <UserProfile path="/user-profile" routing="path">
-      <UserProfile.Link
-        label="Homepage"
+      {/* You can pass the content as a component */}
+      <UserProfile.Page
+        label="Custom Page"
         labelIcon={<DotIcon />}
-        url="/"
-      />
+        url="custom-page"
+      >
+        <CustomPage />
+      </UserProfile.Page>
+
+      {/* You can also pass the content as direct children */}
+      <UserProfile.Page
+        label="Terms"
+        labelIcon={<DotIcon />}
+        url="terms"
+      >
+        <div>
+          <h1>Custom Terms Page</h1>
+          <p>This is the custom terms page</p>
+        </div>
+      </UserProfile.Page>
     </UserProfile>
   );
 
   export default UserProfilePage;
   ```
+</CodeBlockTabs>
 
+## Add a custom link to the `<UserProfile />` component
+
+You can add external links to the `<UserProfile />` navigation sidebar using the `<UserButton.UserProfileLink />` component or the `<UserProfile.Link />` component, depending on your use case.
+
+### Props
+
+`<UserButton.UserProfileLink />` and `<UserProfile.Link />` accept the following props, all of which are *required*:
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `label` | `string` | The name that will be displayed in the navigation sidebar for the link.  |
+| `labelIcon` | `React.ReactElement` | An icon displayed next to the label in the navigation sidebar. |
+| `url` | `string` | The absolute or relative url to navigate to |
+
+### Example
+
+The following example adds a link to the homepage in the navigation sidebar of the `<UserProfile />` component.
+
+<CodeBlockTabs type="usage" options={["<UserButton />", "Dedicated page"]}>
   ```tsx filename="/app/components/Header.tsx"
   "use client";
 
@@ -231,6 +201,36 @@ The following example adds a link to the homepage in the navigation sidebar of t
 
   export default Header;
   ```
+
+  ```tsx filename="/app/user-profile/[[...user-profile]]/page.tsx"
+  "use client";
+
+  import { UserProfile } from "@clerk/nextjs";
+
+  const DotIcon = () => {
+    return (
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 512 512"
+        fill="currentColor"
+      >
+        <path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z" />
+      </svg>
+    )
+  }
+
+  const UserProfilePage = () => (
+    <UserProfile path="/user-profile" routing="path">
+      <UserProfile.Link
+        label="Homepage"
+        labelIcon={<DotIcon />}
+        url="/"
+      />
+    </UserProfile>
+  );
+
+  export default UserProfilePage;
+  ```
 </CodeBlockTabs>
 
 ## Advanced use cases
@@ -239,9 +239,61 @@ The following example adds a link to the homepage in the navigation sidebar of t
 
 If you want to reorder the default routes, `Account` and `Security`, set the `label` prop to `'account'` or `'security'`. This will target the existing default page and allow you to rearrange it.
 
-Note that when reordering default routes, the first item in the navigation sidebar cannot be a `<UserProfile.Link />` or `<UserButton.UserProfileLink />` component.
+Note that when reordering default routes, the first item in the navigation sidebar cannot be a `<UserButton.UserProfileLink />` or `<UserProfile.Link />` component.
 
-<Tabs type="usage" items={["Dedicated Page", "<UserButton />"]}>
+<Tabs type="usage" items={["<UserButton />", "Dedicated Page"]}>
+  <Tab>
+    ```tsx filename="/app/components/Header.tsx"
+    "use client";
+
+    import { UserButton } from "@clerk/nextjs";
+
+    const DotIcon = () => {
+      return (
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 512 512"
+          fill="currentColor"
+        >
+          <path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z" />
+        </svg>
+      )
+    }
+
+    const CustomPage = () => {
+      return (
+        <div>
+          <h1>Custom Profile Page</h1>
+          <p>This is the custom profile page</p>
+        </div>
+      );
+    };
+
+    const Header = () => (
+      <header>
+        <UserButton afterSignOutUrl='/'>
+          <UserButton.UserProfilePage
+            label="Custom Page"
+            url="custom"
+            labelIcon={<DotIcon />}
+          >
+            <CustomPage />
+          </UserButton.UserProfilePage>
+          <UserButton.UserProfileLink
+            label="Homepage"
+            url="/"
+            labelIcon={<DotIcon />}
+          />
+          <UserButton.UserProfilePage label="account" />
+          <UserButton.UserProfilePage label="security" />
+        </UserButton>
+      </header>
+    );
+
+    export default Header;
+    ```
+  </Tab>
+
   <Tab>
     The first page in the list will always be rendered under the root path defined with the `path` prop. Its `url` prop will be ignored.
 
@@ -293,58 +345,6 @@ Note that when reordering default routes, the first item in the navigation sideb
     );
 
     export default UserProfilePage;
-    ```
-  </Tab>
-
-  <Tab>
-    ```tsx filename="/app/components/Header.tsx"
-    "use client";
-
-    import { UserButton } from "@clerk/nextjs";
-
-    const DotIcon = () => {
-      return (
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 512 512"
-          fill="currentColor"
-        >
-          <path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z" />
-        </svg>
-      )
-    }
-
-    const CustomPage = () => {
-      return (
-        <div>
-          <h1>Custom Profile Page</h1>
-          <p>This is the custom profile page</p>
-        </div>
-      );
-    };
-
-    const Header = () => (
-      <header>
-        <UserButton afterSignOutUrl='/'>
-          <UserButton.UserProfilePage
-            label="Custom Page"
-            url="custom"
-            labelIcon={<DotIcon />}
-          >
-            <CustomPage />
-          </UserButton.UserProfilePage>
-          <UserButton.UserProfileLink
-            label="Homepage"
-            url="/"
-            labelIcon={<DotIcon />}
-          />
-          <UserButton.UserProfilePage label="account" />
-          <UserButton.UserProfilePage label="security" />
-        </UserButton>
-      </header>
-    );
-
-    export default Header;
     ```
   </Tab>
 </Tabs>
